lea.output
Grammaire

    0 $accept: program $end

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_list TOKEN_END

    2 type_declaration_part: TYPE type_declaration_list
    3                      | %empty

    4 type_declaration_list: type_declaration_list type_declaration
    5                      | type_declaration

    6 type_declaration: IDENTIFIER EQ type SEMICOLON

    7 type: simple_type
    8     | named_type
    9     | index_type
   10     | array_type
   11     | pointer_type

   12 simple_type: CHARACTER_TOKEN
   13            | INTEGER_TOKEN
   14            | BOOLEAN_TOKEN

   15 named_type: IDENTIFIER

   16 index_type: enumerated_type
   17           | subrange_type

   18 enumerated_type: LPAR identifier_list RPAR

   19 subrange_type: INTEGER RANGE INTEGER

   20 array_type: ARRAY LBRACKET range_type RBRACKET OF type

   21 range_type: enumerated_type
   22           | subrange_type
   23           | named_type

   24 pointer_type: CIRCON type

   25 variable_declaration_part: VAR variable_declaration_list
   26                          | %empty

   27 variable_declaration_list: variable_declaration_list variable_declaration
   28                          | variable_declaration

   29 variable_declaration: identifier_list COLON type SEMICOLON

   30 identifier_list: identifier_list COMMA IDENTIFIER
   31                | IDENTIFIER

   32 procedure_and_function_definition_part: procedure_and_function_definition_list
   33                                       | %empty

   34 procedure_and_function_definition_list: procedure_and_function_definition_list procedure_and_function_definition
   35                                       | procedure_and_function_definition

   36 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part block
   37                                  | procedure_and_function_definition_head SEMICOLON

   38 procedure_and_function_definition_head: PROC IDENTIFIER LPAR argt_part RPAR
   39                                       | FUNC IDENTIFIER LPAR argt_part RPAR COLON type

   40 argt_part: argt_list
   41          | %empty

   42 argt_list: argt_list COMMA argt
   43          | argt

   44 argt: IDENTIFIER COLON type

   45 block: TOKEN_BEGIN statement_list TOKEN_END

   46 statement_list: statement_list statement
   47               | statement

   48 statement: simple_statement
   49          | structured_statement

   50 simple_statement: assignment_statement
   51                 | procedure_statement
   52                 | new_statement
   53                 | dispose_statement
   54                 | println_statement
   55                 | readln_statement
   56                 | return_statement

   57 assignment_statement: variable_access AFF expression SEMICOLON

   58 procedure_statement: procedure_expression SEMICOLON

   59 procedure_expression: IDENTIFIER LPAR expression_part RPAR

   60 expression_part: expression_list
   61                | %empty

   62 expression_list: expression_list COMMA expression
   63                | expression

   64 new_statement: NEW LPAR variable_access RPAR SEMICOLON

   65 dispose_statement: DISPOSE LPAR variable_access RPAR SEMICOLON

   66 println_statement: PRINTLN LPAR expression RPAR SEMICOLON

   67 readln_statement: READLN LPAR expression RPAR SEMICOLON

   68 return_statement: RETURN LPAR expression RPAR SEMICOLON

   69 structured_statement: block
   70                     | if_statement
   71                     | while_statement

   72 if_statement: IF expression THEN statement
   73             | IF expression THEN statement ELSE statement

   74 while_statement: WHILE expression DO statement

   75 variable_access: IDENTIFIER
   76                | indexed_variable
   77                | variable_access CIRCON

   78 indexed_variable: variable_access LBRACKET expression RBRACKET

   79 expression: variable_access
   80           | expression PLUS expression
   81           | expression TIMES expression
   82           | expression MINUS expression
   83           | expression DIV expression
   84           | expression OR expression
   85           | expression AND expression
   86           | MINUS expression
   87           | NOT expression
   88           | expression LT expression
   89           | expression LE expression
   90           | expression GT expression
   91           | expression GE expression
   92           | expression EQ expression
   93           | expression DIFF expression
   94           | LPAR expression RPAR
   95           | procedure_expression
   96           | literal

   97 literal: INTEGER
   98        | CHARACTER
   99        | TRUE
  100        | FALSE
  101        | NULL_TOKEN


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
AFF (258) 57
COMMA (259) 30 42 62
TYPE (260) 2
TRUE (261) 99
FALSE (262) 100
NULL_TOKEN (263) 101
COLON (264) 29 39 44
READLN (265) 67
PRINTLN (266) 66
NEW (267) 64
DISPOSE (268) 65
RETURN (269) 68
OF (270) 20
SEMICOLON (271) 6 29 37 57 58 64 65 66 67 68
RANGE (272) 19
IF (273) 72 73
THEN (274) 72 73
ELSE (275) 73
WHILE (276) 74
DO (277) 74
PLUS (278) 80
MINUS (279) 82 86
TIMES (280) 81
DIV (281) 83
OR (282) 84
AND (283) 85
NOT (284) 87
LT (285) 88
LE (286) 89
GT (287) 90
GE (288) 91
EQ (289) 6 92
DIFF (290) 93
LPAR (291) 18 38 39 59 64 65 66 67 68 94
RPAR (292) 18 38 39 59 64 65 66 67 68 94
LBRACKET (293) 20 78
RBRACKET (294) 20 78
VAR (295) 25
IDENTIFIER (296) 6 15 30 31 38 39 44 59 75
PROC (297) 38
FUNC (298) 39
CIRCON (299) 24 77
ARRAY (300) 20
INTEGER (301) 19 97
CHARACTER (302) 98
INTEGER_TOKEN (303) 13
BOOLEAN_TOKEN (304) 14
CHARACTER_TOKEN (305) 12
TOKEN_BEGIN (306) 1 45
TOKEN_END (307) 1 45
UNARYMINUS (308)


Non-terminaux, suivis des règles où ils apparaissent

$accept (54)
    à gauche: 0
program (55)
    à gauche: 1, à droite: 0
type_declaration_part (56)
    à gauche: 2 3, à droite: 1
type_declaration_list (57)
    à gauche: 4 5, à droite: 2 4
type_declaration (58)
    à gauche: 6, à droite: 4 5
type (59)
    à gauche: 7 8 9 10 11, à droite: 6 20 24 29 39 44
simple_type (60)
    à gauche: 12 13 14, à droite: 7
named_type (61)
    à gauche: 15, à droite: 8 23
index_type (62)
    à gauche: 16 17, à droite: 9
enumerated_type (63)
    à gauche: 18, à droite: 16 21
subrange_type (64)
    à gauche: 19, à droite: 17 22
array_type (65)
    à gauche: 20, à droite: 10
range_type (66)
    à gauche: 21 22 23, à droite: 20
pointer_type (67)
    à gauche: 24, à droite: 11
variable_declaration_part (68)
    à gauche: 25 26, à droite: 1 36
variable_declaration_list (69)
    à gauche: 27 28, à droite: 25 27
variable_declaration (70)
    à gauche: 29, à droite: 27 28
identifier_list (71)
    à gauche: 30 31, à droite: 18 29 30
procedure_and_function_definition_part (72)
    à gauche: 32 33, à droite: 1
procedure_and_function_definition_list (73)
    à gauche: 34 35, à droite: 32 34
procedure_and_function_definition (74)
    à gauche: 36 37, à droite: 34 35
procedure_and_function_definition_head (75)
    à gauche: 38 39, à droite: 36 37
argt_part (76)
    à gauche: 40 41, à droite: 38 39
argt_list (77)
    à gauche: 42 43, à droite: 40 42
argt (78)
    à gauche: 44, à droite: 42 43
block (79)
    à gauche: 45, à droite: 36 69
statement_list (80)
    à gauche: 46 47, à droite: 1 45 46
statement (81)
    à gauche: 48 49, à droite: 46 47 72 73 74
simple_statement (82)
    à gauche: 50 51 52 53 54 55 56, à droite: 48
assignment_statement (83)
    à gauche: 57, à droite: 50
procedure_statement (84)
    à gauche: 58, à droite: 51
procedure_expression (85)
    à gauche: 59, à droite: 58 95
expression_part (86)
    à gauche: 60 61, à droite: 59
expression_list (87)
    à gauche: 62 63, à droite: 60 62
new_statement (88)
    à gauche: 64, à droite: 52
dispose_statement (89)
    à gauche: 65, à droite: 53
println_statement (90)
    à gauche: 66, à droite: 54
readln_statement (91)
    à gauche: 67, à droite: 55
return_statement (92)
    à gauche: 68, à droite: 56
structured_statement (93)
    à gauche: 69 70 71, à droite: 49
if_statement (94)
    à gauche: 72 73, à droite: 70
while_statement (95)
    à gauche: 74, à droite: 71
variable_access (96)
    à gauche: 75 76 77, à droite: 57 64 65 77 78 79
indexed_variable (97)
    à gauche: 78, à droite: 76
expression (98)
    à gauche: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96,
    à droite: 57 62 63 66 67 68 72 73 74 78 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94
literal (99)
    à gauche: 97 98 99 100 101, à droite: 96


État 0

    0 $accept: . program $end

    TYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 3 (type_declaration_part)

    program                aller à l'état 2
    type_declaration_part  aller à l'état 3


État 1

    2 type_declaration_part: TYPE . type_declaration_list

    IDENTIFIER  décalage et aller à l'état 4

    type_declaration_list  aller à l'état 5
    type_declaration       aller à l'état 6


État 2

    0 $accept: program . $end

    $end  décalage et aller à l'état 7


État 3

    1 program: type_declaration_part . variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_list TOKEN_END

    VAR  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 26 (variable_declaration_part)

    variable_declaration_part  aller à l'état 9


État 4

    6 type_declaration: IDENTIFIER . EQ type SEMICOLON

    EQ  décalage et aller à l'état 10


État 5

    2 type_declaration_part: TYPE type_declaration_list .
    4 type_declaration_list: type_declaration_list . type_declaration

    IDENTIFIER  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 2 (type_declaration_part)

    type_declaration  aller à l'état 11


État 6

    5 type_declaration_list: type_declaration .

    $défaut  réduction par utilisation de la règle 5 (type_declaration_list)


État 7

    0 $accept: program $end .

    $défaut  accepter


État 8

   25 variable_declaration_part: VAR . variable_declaration_list

    IDENTIFIER  décalage et aller à l'état 12

    variable_declaration_list  aller à l'état 13
    variable_declaration       aller à l'état 14
    identifier_list            aller à l'état 15


État 9

    1 program: type_declaration_part variable_declaration_part . procedure_and_function_definition_part TOKEN_BEGIN statement_list TOKEN_END

    PROC  décalage et aller à l'état 16
    FUNC  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 33 (procedure_and_function_definition_part)

    procedure_and_function_definition_part  aller à l'état 18
    procedure_and_function_definition_list  aller à l'état 19
    procedure_and_function_definition       aller à l'état 20
    procedure_and_function_definition_head  aller à l'état 21


État 10

    6 type_declaration: IDENTIFIER EQ . type SEMICOLON

    LPAR             décalage et aller à l'état 22
    IDENTIFIER       décalage et aller à l'état 23
    CIRCON           décalage et aller à l'état 24
    ARRAY            décalage et aller à l'état 25
    INTEGER          décalage et aller à l'état 26
    INTEGER_TOKEN    décalage et aller à l'état 27
    BOOLEAN_TOKEN    décalage et aller à l'état 28
    CHARACTER_TOKEN  décalage et aller à l'état 29

    type             aller à l'état 30
    simple_type      aller à l'état 31
    named_type       aller à l'état 32
    index_type       aller à l'état 33
    enumerated_type  aller à l'état 34
    subrange_type    aller à l'état 35
    array_type       aller à l'état 36
    pointer_type     aller à l'état 37


État 11

    4 type_declaration_list: type_declaration_list type_declaration .

    $défaut  réduction par utilisation de la règle 4 (type_declaration_list)


État 12

   31 identifier_list: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 31 (identifier_list)


État 13

   25 variable_declaration_part: VAR variable_declaration_list .
   27 variable_declaration_list: variable_declaration_list . variable_declaration

    IDENTIFIER  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 25 (variable_declaration_part)

    variable_declaration  aller à l'état 38
    identifier_list       aller à l'état 15


État 14

   28 variable_declaration_list: variable_declaration .

    $défaut  réduction par utilisation de la règle 28 (variable_declaration_list)


État 15

   29 variable_declaration: identifier_list . COLON type SEMICOLON
   30 identifier_list: identifier_list . COMMA IDENTIFIER

    COMMA  décalage et aller à l'état 39
    COLON  décalage et aller à l'état 40


État 16

   38 procedure_and_function_definition_head: PROC . IDENTIFIER LPAR argt_part RPAR

    IDENTIFIER  décalage et aller à l'état 41


État 17

   39 procedure_and_function_definition_head: FUNC . IDENTIFIER LPAR argt_part RPAR COLON type

    IDENTIFIER  décalage et aller à l'état 42


État 18

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part . TOKEN_BEGIN statement_list TOKEN_END

    TOKEN_BEGIN  décalage et aller à l'état 43


État 19

   32 procedure_and_function_definition_part: procedure_and_function_definition_list .
   34 procedure_and_function_definition_list: procedure_and_function_definition_list . procedure_and_function_definition

    PROC  décalage et aller à l'état 16
    FUNC  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 32 (procedure_and_function_definition_part)

    procedure_and_function_definition       aller à l'état 44
    procedure_and_function_definition_head  aller à l'état 21


État 20

   35 procedure_and_function_definition_list: procedure_and_function_definition .

    $défaut  réduction par utilisation de la règle 35 (procedure_and_function_definition_list)


État 21

   36 procedure_and_function_definition: procedure_and_function_definition_head . variable_declaration_part block
   37                                  | procedure_and_function_definition_head . SEMICOLON

    SEMICOLON  décalage et aller à l'état 45
    VAR        décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 26 (variable_declaration_part)

    variable_declaration_part  aller à l'état 46


État 22

   18 enumerated_type: LPAR . identifier_list RPAR

    IDENTIFIER  décalage et aller à l'état 12

    identifier_list  aller à l'état 47


État 23

   15 named_type: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 15 (named_type)


État 24

   24 pointer_type: CIRCON . type

    LPAR             décalage et aller à l'état 22
    IDENTIFIER       décalage et aller à l'état 23
    CIRCON           décalage et aller à l'état 24
    ARRAY            décalage et aller à l'état 25
    INTEGER          décalage et aller à l'état 26
    INTEGER_TOKEN    décalage et aller à l'état 27
    BOOLEAN_TOKEN    décalage et aller à l'état 28
    CHARACTER_TOKEN  décalage et aller à l'état 29

    type             aller à l'état 48
    simple_type      aller à l'état 31
    named_type       aller à l'état 32
    index_type       aller à l'état 33
    enumerated_type  aller à l'état 34
    subrange_type    aller à l'état 35
    array_type       aller à l'état 36
    pointer_type     aller à l'état 37


État 25

   20 array_type: ARRAY . LBRACKET range_type RBRACKET OF type

    LBRACKET  décalage et aller à l'état 49


État 26

   19 subrange_type: INTEGER . RANGE INTEGER

    RANGE  décalage et aller à l'état 50


État 27

   13 simple_type: INTEGER_TOKEN .

    $défaut  réduction par utilisation de la règle 13 (simple_type)


État 28

   14 simple_type: BOOLEAN_TOKEN .

    $défaut  réduction par utilisation de la règle 14 (simple_type)


État 29

   12 simple_type: CHARACTER_TOKEN .

    $défaut  réduction par utilisation de la règle 12 (simple_type)


État 30

    6 type_declaration: IDENTIFIER EQ type . SEMICOLON

    SEMICOLON  décalage et aller à l'état 51


État 31

    7 type: simple_type .

    $défaut  réduction par utilisation de la règle 7 (type)


État 32

    8 type: named_type .

    $défaut  réduction par utilisation de la règle 8 (type)


État 33

    9 type: index_type .

    $défaut  réduction par utilisation de la règle 9 (type)


État 34

   16 index_type: enumerated_type .

    $défaut  réduction par utilisation de la règle 16 (index_type)


État 35

   17 index_type: subrange_type .

    $défaut  réduction par utilisation de la règle 17 (index_type)


État 36

   10 type: array_type .

    $défaut  réduction par utilisation de la règle 10 (type)


État 37

   11 type: pointer_type .

    $défaut  réduction par utilisation de la règle 11 (type)


État 38

   27 variable_declaration_list: variable_declaration_list variable_declaration .

    $défaut  réduction par utilisation de la règle 27 (variable_declaration_list)


État 39

   30 identifier_list: identifier_list COMMA . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 52


État 40

   29 variable_declaration: identifier_list COLON . type SEMICOLON

    LPAR             décalage et aller à l'état 22
    IDENTIFIER       décalage et aller à l'état 23
    CIRCON           décalage et aller à l'état 24
    ARRAY            décalage et aller à l'état 25
    INTEGER          décalage et aller à l'état 26
    INTEGER_TOKEN    décalage et aller à l'état 27
    BOOLEAN_TOKEN    décalage et aller à l'état 28
    CHARACTER_TOKEN  décalage et aller à l'état 29

    type             aller à l'état 53
    simple_type      aller à l'état 31
    named_type       aller à l'état 32
    index_type       aller à l'état 33
    enumerated_type  aller à l'état 34
    subrange_type    aller à l'état 35
    array_type       aller à l'état 36
    pointer_type     aller à l'état 37


État 41

   38 procedure_and_function_definition_head: PROC IDENTIFIER . LPAR argt_part RPAR

    LPAR  décalage et aller à l'état 54


État 42

   39 procedure_and_function_definition_head: FUNC IDENTIFIER . LPAR argt_part RPAR COLON type

    LPAR  décalage et aller à l'état 55


État 43

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN . statement_list TOKEN_END

    READLN       décalage et aller à l'état 56
    PRINTLN      décalage et aller à l'état 57
    NEW          décalage et aller à l'état 58
    DISPOSE      décalage et aller à l'état 59
    RETURN       décalage et aller à l'état 60
    IF           décalage et aller à l'état 61
    WHILE        décalage et aller à l'état 62
    IDENTIFIER   décalage et aller à l'état 63
    TOKEN_BEGIN  décalage et aller à l'état 64

    block                 aller à l'état 65
    statement_list        aller à l'état 66
    statement             aller à l'état 67
    simple_statement      aller à l'état 68
    assignment_statement  aller à l'état 69
    procedure_statement   aller à l'état 70
    procedure_expression  aller à l'état 71
    new_statement         aller à l'état 72
    dispose_statement     aller à l'état 73
    println_statement     aller à l'état 74
    readln_statement      aller à l'état 75
    return_statement      aller à l'état 76
    structured_statement  aller à l'état 77
    if_statement          aller à l'état 78
    while_statement       aller à l'état 79
    variable_access       aller à l'état 80
    indexed_variable      aller à l'état 81


État 44

   34 procedure_and_function_definition_list: procedure_and_function_definition_list procedure_and_function_definition .

    $défaut  réduction par utilisation de la règle 34 (procedure_and_function_definition_list)


État 45

   37 procedure_and_function_definition: procedure_and_function_definition_head SEMICOLON .

    $défaut  réduction par utilisation de la règle 37 (procedure_and_function_definition)


État 46

   36 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part . block

    TOKEN_BEGIN  décalage et aller à l'état 64

    block  aller à l'état 82


État 47

   18 enumerated_type: LPAR identifier_list . RPAR
   30 identifier_list: identifier_list . COMMA IDENTIFIER

    COMMA  décalage et aller à l'état 39
    RPAR   décalage et aller à l'état 83


État 48

   24 pointer_type: CIRCON type .

    $défaut  réduction par utilisation de la règle 24 (pointer_type)


État 49

   20 array_type: ARRAY LBRACKET . range_type RBRACKET OF type

    LPAR        décalage et aller à l'état 22
    IDENTIFIER  décalage et aller à l'état 23
    INTEGER     décalage et aller à l'état 26

    named_type       aller à l'état 84
    enumerated_type  aller à l'état 85
    subrange_type    aller à l'état 86
    range_type       aller à l'état 87


État 50

   19 subrange_type: INTEGER RANGE . INTEGER

    INTEGER  décalage et aller à l'état 88


État 51

    6 type_declaration: IDENTIFIER EQ type SEMICOLON .

    $défaut  réduction par utilisation de la règle 6 (type_declaration)


État 52

   30 identifier_list: identifier_list COMMA IDENTIFIER .

    $défaut  réduction par utilisation de la règle 30 (identifier_list)


État 53

   29 variable_declaration: identifier_list COLON type . SEMICOLON

    SEMICOLON  décalage et aller à l'état 89


État 54

   38 procedure_and_function_definition_head: PROC IDENTIFIER LPAR . argt_part RPAR

    IDENTIFIER  décalage et aller à l'état 90

    $défaut  réduction par utilisation de la règle 41 (argt_part)

    argt_part  aller à l'état 91
    argt_list  aller à l'état 92
    argt       aller à l'état 93


État 55

   39 procedure_and_function_definition_head: FUNC IDENTIFIER LPAR . argt_part RPAR COLON type

    IDENTIFIER  décalage et aller à l'état 90

    $défaut  réduction par utilisation de la règle 41 (argt_part)

    argt_part  aller à l'état 94
    argt_list  aller à l'état 92
    argt       aller à l'état 93


État 56

   67 readln_statement: READLN . LPAR expression RPAR SEMICOLON

    LPAR  décalage et aller à l'état 95


État 57

   66 println_statement: PRINTLN . LPAR expression RPAR SEMICOLON

    LPAR  décalage et aller à l'état 96


État 58

   64 new_statement: NEW . LPAR variable_access RPAR SEMICOLON

    LPAR  décalage et aller à l'état 97


État 59

   65 dispose_statement: DISPOSE . LPAR variable_access RPAR SEMICOLON

    LPAR  décalage et aller à l'état 98


État 60

   68 return_statement: RETURN . LPAR expression RPAR SEMICOLON

    LPAR  décalage et aller à l'état 99


État 61

   72 if_statement: IF . expression THEN statement
   73             | IF . expression THEN statement ELSE statement

    TRUE        décalage et aller à l'état 100
    FALSE       décalage et aller à l'état 101
    NULL_TOKEN  décalage et aller à l'état 102
    MINUS       décalage et aller à l'état 103
    NOT         décalage et aller à l'état 104
    LPAR        décalage et aller à l'état 105
    IDENTIFIER  décalage et aller à l'état 63
    INTEGER     décalage et aller à l'état 106
    CHARACTER   décalage et aller à l'état 107

    procedure_expression  aller à l'état 108
    variable_access       aller à l'état 109
    indexed_variable      aller à l'état 81
    expression            aller à l'état 110
    literal               aller à l'état 111


État 62

   74 while_statement: WHILE . expression DO statement

    TRUE        décalage et aller à l'état 100
    FALSE       décalage et aller à l'état 101
    NULL_TOKEN  décalage et aller à l'état 102
    MINUS       décalage et aller à l'état 103
    NOT         décalage et aller à l'état 104
    LPAR        décalage et aller à l'état 105
    IDENTIFIER  décalage et aller à l'état 63
    INTEGER     décalage et aller à l'état 106
    CHARACTER   décalage et aller à l'état 107

    procedure_expression  aller à l'état 108
    variable_access       aller à l'état 109
    indexed_variable      aller à l'état 81
    expression            aller à l'état 112
    literal               aller à l'état 111


État 63

   59 procedure_expression: IDENTIFIER . LPAR expression_part RPAR
   75 variable_access: IDENTIFIER .

    LPAR  décalage et aller à l'état 113

    $défaut  réduction par utilisation de la règle 75 (variable_access)


État 64

   45 block: TOKEN_BEGIN . statement_list TOKEN_END

    READLN       décalage et aller à l'état 56
    PRINTLN      décalage et aller à l'état 57
    NEW          décalage et aller à l'état 58
    DISPOSE      décalage et aller à l'état 59
    RETURN       décalage et aller à l'état 60
    IF           décalage et aller à l'état 61
    WHILE        décalage et aller à l'état 62
    IDENTIFIER   décalage et aller à l'état 63
    TOKEN_BEGIN  décalage et aller à l'état 64

    block                 aller à l'état 65
    statement_list        aller à l'état 114
    statement             aller à l'état 67
    simple_statement      aller à l'état 68
    assignment_statement  aller à l'état 69
    procedure_statement   aller à l'état 70
    procedure_expression  aller à l'état 71
    new_statement         aller à l'état 72
    dispose_statement     aller à l'état 73
    println_statement     aller à l'état 74
    readln_statement      aller à l'état 75
    return_statement      aller à l'état 76
    structured_statement  aller à l'état 77
    if_statement          aller à l'état 78
    while_statement       aller à l'état 79
    variable_access       aller à l'état 80
    indexed_variable      aller à l'état 81


État 65

   69 structured_statement: block .

    $défaut  réduction par utilisation de la règle 69 (structured_statement)


État 66

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_list . TOKEN_END
   46 statement_list: statement_list . statement

    READLN       décalage et aller à l'état 56
    PRINTLN      décalage et aller à l'état 57
    NEW          décalage et aller à l'état 58
    DISPOSE      décalage et aller à l'état 59
    RETURN       décalage et aller à l'état 60
    IF           décalage et aller à l'état 61
    WHILE        décalage et aller à l'état 62
    IDENTIFIER   décalage et aller à l'état 63
    TOKEN_BEGIN  décalage et aller à l'état 64
    TOKEN_END    décalage et aller à l'état 115

    block                 aller à l'état 65
    statement             aller à l'état 116
    simple_statement      aller à l'état 68
    assignment_statement  aller à l'état 69
    procedure_statement   aller à l'état 70
    procedure_expression  aller à l'état 71
    new_statement         aller à l'état 72
    dispose_statement     aller à l'état 73
    println_statement     aller à l'état 74
    readln_statement      aller à l'état 75
    return_statement      aller à l'état 76
    structured_statement  aller à l'état 77
    if_statement          aller à l'état 78
    while_statement       aller à l'état 79
    variable_access       aller à l'état 80
    indexed_variable      aller à l'état 81


État 67

   47 statement_list: statement .

    $défaut  réduction par utilisation de la règle 47 (statement_list)


État 68

   48 statement: simple_statement .

    $défaut  réduction par utilisation de la règle 48 (statement)


État 69

   50 simple_statement: assignment_statement .

    $défaut  réduction par utilisation de la règle 50 (simple_statement)


État 70

   51 simple_statement: procedure_statement .

    $défaut  réduction par utilisation de la règle 51 (simple_statement)


État 71

   58 procedure_statement: procedure_expression . SEMICOLON

    SEMICOLON  décalage et aller à l'état 117


État 72

   52 simple_statement: new_statement .

    $défaut  réduction par utilisation de la règle 52 (simple_statement)


État 73

   53 simple_statement: dispose_statement .

    $défaut  réduction par utilisation de la règle 53 (simple_statement)


État 74

   54 simple_statement: println_statement .

    $défaut  réduction par utilisation de la règle 54 (simple_statement)


État 75

   55 simple_statement: readln_statement .

    $défaut  réduction par utilisation de la règle 55 (simple_statement)


État 76

   56 simple_statement: return_statement .

    $défaut  réduction par utilisation de la règle 56 (simple_statement)


État 77

   49 statement: structured_statement .

    $défaut  réduction par utilisation de la règle 49 (statement)


État 78

   70 structured_statement: if_statement .

    $défaut  réduction par utilisation de la règle 70 (structured_statement)


État 79

   71 structured_statement: while_statement .

    $défaut  réduction par utilisation de la règle 71 (structured_statement)


État 80

   57 assignment_statement: variable_access . AFF expression SEMICOLON
   77 variable_access: variable_access . CIRCON
   78 indexed_variable: variable_access . LBRACKET expression RBRACKET

    AFF       décalage et aller à l'état 118
    LBRACKET  décalage et aller à l'état 119
    CIRCON    décalage et aller à l'état 120


État 81

   76 variable_access: indexed_variable .

    $défaut  réduction par utilisation de la règle 76 (variable_access)


État 82

   36 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part block .

    $défaut  réduction par utilisation de la règle 36 (procedure_and_function_definition)


État 83

   18 enumerated_type: LPAR identifier_list RPAR .

    $défaut  réduction par utilisation de la règle 18 (enumerated_type)


État 84

   23 range_type: named_type .

    $défaut  réduction par utilisation de la règle 23 (range_type)


État 85

   21 range_type: enumerated_type .

    $défaut  réduction par utilisation de la règle 21 (range_type)


État 86

   22 range_type: subrange_type .

    $défaut  réduction par utilisation de la règle 22 (range_type)


État 87

   20 array_type: ARRAY LBRACKET range_type . RBRACKET OF type

    RBRACKET  décalage et aller à l'état 121


État 88

   19 subrange_type: INTEGER RANGE INTEGER .

    $défaut  réduction par utilisation de la règle 19 (subrange_type)


État 89

   29 variable_declaration: identifier_list COLON type SEMICOLON .

    $défaut  réduction par utilisation de la règle 29 (variable_declaration)


État 90

   44 argt: IDENTIFIER . COLON type

    COLON  décalage et aller à l'état 122

